--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Life Resume Generator | The Purple Edition</title>
+    <title>Life Resume</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=Playfair+Display:ital,wght@0,700;1,700&family=Space+Mono&display=swap" rel="stylesheet">
     <style>
@@ -86,7 +86,7 @@
 <link rel="stylesheet" href="/index.css">
 </head>
 <body>
-    <div class="bg-watermark">PURPLE VIBES</div>
+    <div class="bg-watermark">LIFE RESUME GENERATOR</div>
     <div id="root"></div>
 <script type="module" src="/index.tsx"></script>
 </body>
